<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardid"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        app:cardElevation="30sp"
        >

        <GridLayout
            android:id="@+id/item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="9">
            <TextView
                android:id="@+id/Serialid"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/s_no"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/type"
                android:layout_width="60sp"
                android:layout_height="match_parent"
                android:text="@string/type"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginStart="10sp"
                />
            <TextView
                android:id="@+id/weight"
                android:layout_width="80sp"
                android:layout_height="match_parent"
                android:text="@string/weight"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginStart="10sp"
                />
            <TextView
                android:id="@+id/weight_poly"
                android:layout_width="70sp"
                android:layout_height="match_parent"
                android:text="@string/weight_poly"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginStart="10sp"
                />
            <TextView
                android:id="@+id/quality"
                android:layout_width="80sp"
                android:layout_height="match_parent"
                android:text="@string/quality"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginStart="10sp"
                />
            <TextView
                android:id="@+id/num"
                android:layout_width="80sp"
                android:layout_height="match_parent"
                android:text="@string/number"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginStart="10sp"
                />
            <TextView
                android:id="@+id/labour"
                android:layout_width="100sp"
                android:layout_height="match_parent"
                android:text="@string/labour_piece"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginStart="10sp"
                />
            <TextView
                android:id="@+id/fine"
                android:layout_width="120sp"
                android:layout_height="match_parent"
                android:text="@string/fine"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginStart="10sp"
                />
            <TextView
                android:id="@+id/Price"
                android:layout_width="120sp"
                android:layout_height="match_parent"
                android:text="@string/price"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginStart="10sp"
                />
        </GridLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>