<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardid"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        app:cardElevation="30sp"
        >
        <GridLayout
            android:id="@+id/item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="5">
            <TextView
                android:id="@+id/Serialid"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/s_no"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/type"
                android:layout_width="60sp"
                android:layout_height="match_parent"
                android:text="@string/type"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginStart="10sp"
                />
            <TextView
                android:id="@+id/value"
                android:layout_width="120sp"
                android:layout_height="match_parent"
                android:text="@string/value"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginStart="10sp"
                />
            <TextView
                android:id="@+id/amount"
                android:layout_width="120sp"
                android:layout_height="match_parent"
                android:text="@string/amount"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginStart="10sp"
                />
            <TextView
                android:id="@+id/fine"
                android:layout_width="120sp"
                android:layout_height="match_parent"
                android:text="@string/fine"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginStart="10sp"
                />
        </GridLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>