<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_type"
            android:textStyle="bold"
            >
        </TextView>
        <Spinner
            android:id="@+id/type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/types">
        </Spinner>
    </LinearLayout>
    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_weight_of_an_item"
        android:textStyle="bold"
        android:layout_below="@+id/spinner"
        android:inputType="numberDecimal">
    </EditText>
    <EditText
        android:id="@+id/wpp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_weight_per_polythene"
        android:textStyle="bold"
        android:layout_below="@+id/weight"
        android:inputType="numberDecimal">
    </EditText>

    <EditText
        android:id="@+id/num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_number_of_pieces"
        android:textStyle="bold"
        android:layout_below="@+id/wpp"
        android:inputType="number">
    </EditText>

    <RelativeLayout
        android:id="@+id/lab"
        android:layout_below="@+id/num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/elab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter labour"
            android:textStyle="bold"
            android:inputType="numberDecimal">
        </EditText>
        <Spinner
            android:id="@+id/l_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/labunit"
            android:layout_toRightOf="@+id/elab">
        </Spinner>
    </RelativeLayout>
    <EditText
        android:id="@+id/quality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_quality_of_an_item"
        android:textStyle="bold"
        android:autofillHints="0"
        android:layout_below="@+id/lab"
        android:inputType="numberDecimal"
         >
    </EditText>

    <Button
        android:id="@id/btadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add"
        android:textStyle="bold"
        android:backgroundTint="#AFA2A2"
        android:layout_below="@+id/quality"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>